@@ -1,5 +1,6 @@
 Changes for 1.3.1:
 
+ - improved sqlite3 database support (Eugene)
  - developed simple trigger expression editor (Eugene)
  - fixed history viewing of log files (Eugene)
  - added images for oracle(Eugene)
